versions/0.25.3/_sources/refs/_aws-cdk_aws-autoscaling-common.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"Gz7ckZHYgvxQ9N3wePGKGniZmUAqie/skyXF5kE6o9Q="}

@aws-cdk/aws-autoscaling-common
===============================

.. mdinclude:: ./__aws-cdk_aws-autoscaling-common.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.AutoScaling.Common/0.25.3>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.AutoScaling.Common" Version="0.25.3" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.AutoScaling.Common --version 0.25.3

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.AutoScaling.Common" version="0.25.3" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/autoscaling-common/0.25.3/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:autoscaling-common:jar:0.25.3'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="autoscaling-common" rev="0.25.3"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>autoscaling-common</artifactId>
           <version>0.25.3</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:autoscaling-common:0.25.3'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='autoscaling-common', version='0.25.3')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscaling-common/v/0.25.3>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscaling-common@0.25.3

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscaling-common": "^0.25.3"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscaling-common@0.25.3


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscaling-common/v/0.25.3>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscaling-common@0.25.3

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscaling-common": "^0.25.3"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscaling-common@0.25.3



.. py:module:: @aws-cdk/aws-autoscaling-common

Alarms (interface)
^^^^^^^^^^^^^^^^^^

.. py:class:: Alarms

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling.Common;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.common.Alarms;

      .. code-tab:: javascript

         // Alarms is an interface

      .. code-tab:: typescript

         import { Alarms } from '@aws-cdk/aws-autoscaling-common';





   .. py:attribute:: lowerAlarmIntervalIndex

      :type: number *(optional)*


   .. py:attribute:: upperAlarmIntervalIndex

      :type: number *(optional)*


ArbitraryIntervals (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ArbitraryIntervals

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling.Common;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.common.ArbitraryIntervals;

      .. code-tab:: javascript

         // ArbitraryIntervals is an interface

      .. code-tab:: typescript

         import { ArbitraryIntervals } from '@aws-cdk/aws-autoscaling-common';





   .. py:attribute:: absolute

      :type: boolean


   .. py:attribute:: intervals

      :type: :py:class:`~@aws-cdk/aws-autoscaling-common.ScalingInterval`\ []


CompleteScalingInterval (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CompleteScalingInterval

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling.Common;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.common.CompleteScalingInterval;

      .. code-tab:: javascript

         // CompleteScalingInterval is an interface

      .. code-tab:: typescript

         import { CompleteScalingInterval } from '@aws-cdk/aws-autoscaling-common';





   .. py:attribute:: lower

      :type: number


   .. py:attribute:: upper

      :type: number


   .. py:attribute:: change

      :type: number *(optional)*


IRandomGenerator (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: IRandomGenerator

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling.Common;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.common.IRandomGenerator;

      .. code-tab:: javascript

         // IRandomGenerator is an interface

      .. code-tab:: typescript

         import { IRandomGenerator } from '@aws-cdk/aws-autoscaling-common';





   .. py:method:: nextBoolean() -> boolean

      :rtype: boolean
      :abstract: Yes


   .. py:method:: nextInt(min, max) -> number

      :param min: 
      :type min: number
      :param max: 
      :type max: number
      :rtype: number
      :abstract: Yes


ScalingInterval (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ScalingInterval

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling.Common;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.common.ScalingInterval;

      .. code-tab:: javascript

         // ScalingInterval is an interface

      .. code-tab:: typescript

         import { ScalingInterval } from '@aws-cdk/aws-autoscaling-common';



   A range of metric values in which to apply a certain scaling operation





   .. py:attribute:: change

      The capacity adjustment to apply in this interval

      

      The number is interpreted differently based on AdjustmentType:

      

      - ChangeInCapacity: add the adjustment to the current capacity.

        The number can be positive or negative.

      - PercentChangeInCapacity: add or remove the given percentage of the current

         capacity to itself. The number can be in the range [-100..100].

      - ExactCapacity: set the capacity to this number. The number must

         be positive.



      :type: number


   .. py:attribute:: lower

      The lower bound of the interval.

      

      The scaling adjustment will be applied if the metric is higher than this value.



      :type: number *(optional)*
      :default: Threshold automatically derived from neighbouring intervals


   .. py:attribute:: upper

      The upper bound of the interval.

      

      The scaling adjustment will be applied if the metric is lower than this value.



      :type: number *(optional)*
      :default: Threshold automatically derived from neighbouring intervals


